# bitcom-cpp-api

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: BoostWsClient.hpp  bitcom_rest.h  bitcom_ws.h  utils.h
src/: bitcom_rest.cpp  bitcom_ws.cpp
